# Babylon.js

./: .clang-format  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hintrc  .mergify.yml  .npmrc  .prettierignore  .prettierrc  .swcrc  .tool-versions  .travis.yml  AGENTS.md  Babylon.csproj  Babylon.js.csproj  Babylon.js.sln  Babylon.sln  BabylonJS.csproj  BabylonJS.sln  BabylonJS2017.sln  BabylonNative.podspec  CHANGELOG.md  CMakeLists.txt  CNAME  CNAME.txt  CODE_OF_CONDUCT.md  FireTeam  LICENSE.md  NOTICE.md  Oimo.js  PERFORMANCE_IMPROVEMENTS.md  README.md  Web.Debug.config  (+133 more)
Apps/Playground/: CMakeLists.txt
Apps/Playground/Android/: .gitignore  build.gradle  package-lock.json  package.json
Apps/Playground/Android/app/: CMakeLists.txt  build.gradle
Apps/Playground/Scripts/: experience.js  playground_runner.js
Apps/Playground/Shared/: InputManager.h
Apps/Playground/UWP/: App.cpp  App.h  Package.appxmanifest
Apps/Playground/Win32/: App.cpp  App.rc  Resource.h
Apps/Playground/X11/: App.cpp
Apps/Playground/iOS/: LibNativeBridge.h  LibNativeBridge.mm  ViewController.swift
Apps/Playground/iOS/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Apps/Playground/macOS/: AppDelegate.m  ViewController.h  ViewController.mm
Apps/Playground/macOS/Base.lproj/: Main.storyboard
Apps/ValidationTests/: CMakeLists.txt
Apps/ValidationTests/Scripts/: README.md  address_filtering_test.js  config.json  marble.js  validation_native.js
Apps/ValidationTests/Shared/: TestUtils.h
Apps/ValidationTests/Win32/: App.cpp  App.rc  Resource.h
Apps/ValidationTests/X11/: App.cpp
BabylonNative.Android/app/: CMakeLists.txt  build.gradle
BabylonNative.Android/app/src/: FindBABYLONNATIVE.cmake
BabylonNative.Android/app/src/main/: AndroidManifest.xml
Core/AppRuntime/: CMakeLists.txt
Core/AppRuntime/Include/Babylon/: AppRuntime.h
Core/AppRuntime/Source/: AppRuntime.cpp  AppRuntimeAndroid.cpp  AppRuntimeChakra.cpp  AppRuntimeJavaScriptCore.cpp  AppRuntimeUnix.cpp  AppRuntimeV8.cpp  AppRuntimeWin32.cpp  Common.h  CommonUWP.cpp  WorkQueue.cpp  WorkQueue.h
Core/JsRuntime/: CMakeLists.txt
Core/JsRuntime/Include/Babylon/: JsRuntime.h  JsRuntimeScheduler.h
Core/JsRuntime/Source/: JsRuntime.cpp
Core/Platform/: CMakeLists.txt
Core/Platform/Android/Source/: Platform.cpp
Core/ScriptLoader/: CMakeLists.txt
Core/ScriptLoader/Include/Babylon/: ScriptLoader.h
Core/ScriptLoader/Source/: ScriptLoader.cpp
Dependencies/: CMakeLists.txt
Dependencies/AndroidExtensions/: CMakeLists.txt
Dependencies/AndroidExtensions/Include/AndroidExtensions/: Globals.h  JavaWrappers.h
Dependencies/AndroidExtensions/Source/: Globals.cpp  JavaWrappers.cpp
Dependencies/BabylonNativeCMakeFunctions/: CMakeLists.txt
Dependencies/BabylonNativeUtils/: CMakeLists.txt
Dependencies/BabylonNativeUtils/Include/Babylon/: TicketedCollection.h
Dependencies/BabylonNativeUtils/Source/: NetworkUtils.cpp  NetworkUtils.mm
Dependencies/CMakeExtensions/: CMakeLists.txt
Dependencies/UrlLib/: CMakeLists.txt
Dependencies/UrlLib/Include/UrlLib/: UrlLib.h
Dependencies/UrlLib/Source/Android/: UrlRequest.cpp
Dependencies/UrlLib/Source/Apple/: UrlRequest.mm
Dependencies/UrlLib/Source/Shared/: UrlRequest.h
Dependencies/napi/: CMakeLists.txt  OnLinkedAsDependency.cmake
Dependencies/napi/source/: env_JavaScriptCore.cc  env_chakra.cc  env_v8.cc  js_native_api_JavaScriptCore.cc  js_native_api_JavaScriptCore.h  js_native_api_chakra.cc  js_native_api_chakra.h  js_native_api_v8.cc  js_native_api_v8.h
Dependencies/openssl/: OpenSSLStaticConfig.cmake  buildinf.h
Dependencies/xr/: CMakeLists.txt
Dependencies/xr/Include/: XR.h
Dependencies/xr/Source/: XR.cpp
Plugins/Console/: CMakeLists.txt
Plugins/Console/Source/: Console.cpp
Plugins/NativeEngine/: CMakeLists.txt
Plugins/NativeEngine/Source/: BgfxCallback.cpp  BgfxCallback.h  InitializeNativeEngine.cpp  NativeEngine.cpp  NativeEngine.h  NativeEngineAPI.cpp  NativeXr.cpp  ResourceLimits.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerD3D.cpp  ShaderCompilerMetal.cpp  ShaderCompilerOpenGL.cpp
Plugins/NativeInput/: CMakeLists.txt
Plugins/NativeInput/Source/: DeviceInputSystem.cpp  DeviceInputSystem.h  NativeInput.cpp  NativeInput.h
Plugins/NativeWindow/: CMakeLists.txt
Plugins/NativeWindow/Source/: NativeWindow.cpp  NativeWindow.h
Plugins/NativeXr/: CMakeLists.txt
Plugins/NativeXr/Source/: NativeXr.cpp
Plugins/ScriptLoader/: CMakeLists.txt
Plugins/ScriptLoader/Source/: ScriptLoader.cpp
Plugins/XMLHttpRequest/: CMakeLists.txt
Plugins/XMLHttpRequest/Source/: XMLHttpRequest.cpp  XMLHttpRequest.h  XMLHttpRequestApple.cpp  XMLHttpRequestApple.m  XMLHttpRequestApple.mm  XMLHttpRequestUWP.cpp
Polyfills/Console/: CMakeLists.txt
Polyfills/Console/Source/: Console.cpp  Console.h
Polyfills/Window/: CMakeLists.txt
Polyfills/Window/Source/: Window.cpp  Window.h
Polyfills/XMLHttpRequest/: CMakeLists.txt
Polyfills/XMLHttpRequest/Source/: XMLHttpRequest.cpp  XMLHttpRequest.h
TestApp/: CMakeLists.txt
TestApp/Scripts/: babylon.glTF2FileLoader.js  experience.js
TestApp/Source/Android/: build.gradle
TestApp/Source/Shared/: InputManager.cpp  InputManager.h  TestUtils.h
TestApp/Source/UWP/: App.cpp  App.h  InputManagerUWP.cpp  InputManagerUWP.h  Package.appxmanifest  TemporaryKey.pfx
TestApp/Source/Win32/: App.cpp  App.h  App.rc  InputManagerWin32.cpp  InputManagerWin32.h  Resource.h  pch.cpp  pch.h
TestApp/Source/iOS/: AppDelegate.swift  LibNativeBridge.h  LibNativeBridge.mm  ViewController.swift
TestApp/Source/macOS/: AppDelegate.h  AppDelegate.m  Helper.cpp  Helper.h  Info.plist  ViewController.h  ViewController.m  ViewController.mm  main.m
TestApp/ValidationTests/: README.md  config.json  decode_encode_image_test.js  framebuffer_setview_test.js  gltf2_asset_generator_test.js  gltf2_sample_models_test.js  shader_float_array_test.js  shader_uniform_test.js  validation_native.js  viewport_test.js
Viewer/: he  (+61 more)
(+6980 files in other folders)
